fixing spacing

--- a/public/css/modules.css
+++ b/public/css/modules.css
@@ -46,8 +46,12 @@
 	margin:0 0 20px;
 }
 
+.sku-list-module h3{
+	margin-bottom:20px;
+}
+
 .sku-list-module ul+h3{
-	margin:40px 0 20px;
+	margin-top:40px;
 }
 
 .module-see-all-link{
